Updated imports, comments

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Download the UC Merced Land Use dataset archive from http://vision.ucmerced.edu/datasets/landuse.html"
+    "### Download UC Merced Land Use dataset from http://vision.ucmerced.edu/datasets/landuse.html"
    ]
   },
   {
@@ -13,21 +13,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import pandas as pd\n",
     "import os\n",
     "from zipfile import ZipFile\n",
     "\n",
     "from skimage.transform import resize\n",
     "from skimage.external.tifffile import imread\n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import make_pipeline\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
-    "\n",
-    "%matplotlib inline"
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -134,7 +127,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Nope! Need to resize the images to the same shape."
+    "### Nope! Need to resize all images to the same shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Note: skimage.transform.resize( ) scales pixel values into range 0.0 - 1.0"
    ]
   },
   {
@@ -159,32 +159,22 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Note that skimage.transform.resize scales pixel values into range 0.0 - 1.0"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(2100, 247, 247, 3)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2100, 247, 247, 3)\n"
+     ]
     }
    ],
    "source": [
     "new_shape = min(image.shape[:-1] for image in images)\n",
     "images = np.array([resize(image, new_shape, mode='constant') for image in images])\n",
-    "images.shape"
+    "print(images.shape)"
    ]
   },
   {
