--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -14,10 +14,10 @@
     }
    ],
    "source": [
+    "from collections import defaultdict\n",
     "from contextlib import suppress\n",
     "import numpy as np\n",
     "import os\n",
-    "import shutil\n",
     "from zipfile import ZipFile\n",
     "\n",
     "from PIL import Image\n",
@@ -111,6 +111,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def choose_directory():\n",
+    "    # Use an 80% training data split\n",
+    "    train_split = 0.8\n",
+    "    if np.random.rand() < train_split:\n",
+    "        return 'train'\n",
+    "    # 50/50 split for validation and test data\n",
+    "    return 'validate' if np.random.rand() < 0.5 else 'test'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_image_filename(image_num, class_num):\n",
+    "    return str(image_num).zfill(4) + '_' + str(class_num).zfill(2) + '.tif'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def classnum_from_filename(filename):\n",
+    "    # Extract class number from last 2 characters before filename extension\n",
+    "    return int(filename.split('.')[0][-2:])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Define transformed image target directory paths"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "out_dir = os.path.join('data', 'transformed')\n",
+    "target_dirs = {target: os.path.join(out_dir, target) for target in ['train', 'validate', 'test']}"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -119,76 +172,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "out_dir = os.path.join('data', 'transformed')\n",
-    "train_dir = os.path.join(out_dir, 'train')\n",
-    "validate_dir = os.path.join(out_dir, 'validate')\n",
+    "# Set random seed for reproducibility\n",
+    "np.random.seed(2017)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "labels = defaultdict(list)\n",
     "\n",
-    "# Delete the existing \"transformed\" directory (and all subdirectories and files)\n",
-    "with suppress(FileNotFoundError):\n",
-    "    shutil.rmtree(out_dir)\n",
-    "\n",
-    "# Make new, empty directories\n",
-    "os.mkdir(out_dir)\n",
-    "os.mkdir(train_dir)\n",
-    "os.mkdir(validate_dir)\n",
-    "\n",
-    "# Create train and validate label lists\n",
-    "train_labels = []\n",
-    "validate_labels = []\n",
-    "\n",
-    "# Get a list of the source image file pathnames from \"data/UCMerced_LandUse/Images\"\n",
-    "filepaths = get_image_filepaths(source_dir)\n",
-    "\n",
-    "# Randomly shuffle the image file pathnames (see for reproducibility)\n",
-    "np.random.seed(8)\n",
-    "np.random.shuffle(filepaths)\n",
-    "\n",
-    "# Pass 1:\n",
-    "# 1) Collect image classes {name: number} in the \"class_num_by_class_name\" dictionary\n",
-    "# 2) Determine the smallest image dimension\n",
-    "\n",
-    "class_num_by_class_name = dict()\n",
-    "class_num_by_filepath = dict()\n",
-    "\n",
-    "new_dim = 256\n",
-    "for filepath in filepaths:\n",
-    "    # Derive image file's class name from the file pathname\n",
-    "    class_name = class_name_from_path(filepath)\n",
-    "\n",
-    "    # Add (potentially) new class to \"class_num_by_class_name\" dictionary\n",
-    "    class_num_by_class_name.setdefault(class_name, len(class_num_by_class_name))\n",
+    "# Assume if directory \"transformed\" exists, it contains all the processed images.\n",
+    "if not os.path.isdir(out_dir):\n",
+    "    # Make new directories\n",
+    "    os.mkdir(out_dir)\n",
+    "    for target in target_dirs:\n",
+    "        os.mkdir(target_dirs[target])\n",
     "    \n",
-    "    # Store class number for future reference\n",
-    "    class_num_by_filepath[filepath] = class_num_by_class_name[class_name]\n",
+    "    # Get a list of the source image file pathnames from \"data/UCMerced_LandUse/Images\"\n",
+    "    filepaths = get_image_filepaths(source_dir)\n",
     "\n",
-    "    # Find the minimum height or width dimension of all images\n",
-    "    with Image.open(filepath) as img:\n",
-    "        new_dim = min(new_dim, min(img.size))\n",
+    "    # Randomly shuffle the image file pathnames \n",
+    "    np.random.shuffle(filepaths)\n",
     "\n",
-    "# Pass 2:\n",
-    "# 1) Randomly split (e.g. 80/20) images between the train and validate directories\n",
-    "# 2) Resize all images to a common (new_dim, new_dim) size\n",
-    "# 3) Save class label information for each image\n",
+    "    # Pass 1:\n",
+    "    # 1) Collect image classes {name: number} in the \"class_num_by_class_name\" dictionary\n",
+    "    # 2) Determine the smallest image dimension\n",
     "\n",
-    "for image_num, filepath in enumerate(filepaths):\n",
-    "    with Image.open(filepath) as img:\n",
-    "        # Separate images between train/validate directories \n",
-    "        target = train_dir if np.random.rand() < 0.80 else validate_dir\n",
-    "        \n",
-    "        # Name images in numbered format nnnn.tif\n",
-    "        _, ext = os.path.splitext(filepath)\n",
-    "        path = os.path.join(target, str(image_num).zfill(4) + ext)\n",
+    "    class_num_by_class_name = dict()\n",
+    "    class_num_by_filepath = dict()\n",
     "\n",
-    "        # Resize image to common shape and save to target directory\n",
-    "        img.resize((new_dim, new_dim)).save(path)\n",
-    "        \n",
-    "        # Capture class label to \"train_labels\" or \"validate_labels\" list\n",
-    "        class_num = class_num_by_filepath[filepath]\n",
-    "        train_labels.append(class_num) if target == train_dir else validate_labels.append(class_num)"
+    "    new_dim = 256\n",
+    "    for filepath in filepaths:\n",
+    "        # Derive image file's class name from the file pathname\n",
+    "        class_name = class_name_from_path(filepath)\n",
+    "\n",
+    "        # Add (potentially) new class to \"class_num_by_class_name\" dictionary\n",
+    "        class_num_by_class_name.setdefault(class_name, len(class_num_by_class_name))\n",
+    "\n",
+    "        # Store class number for future reference\n",
+    "        class_num_by_filepath[filepath] = class_num_by_class_name[class_name]\n",
+    "\n",
+    "        # Find the minimum height or width dimension of all images\n",
+    "        with Image.open(filepath) as img:\n",
+    "            new_dim = min(new_dim, min(img.size))\n",
+    "\n",
+    "    # Pass 2:\n",
+    "    # 1) Randomly split images between the train, validate, and test directories\n",
+    "    # 2) Resize all images to a common (new_dim, new_dim) size\n",
+    "    # 3) Save class label information for each image\n",
+    "\n",
+    "    for image_num, filepath in enumerate(filepaths):\n",
+    "        with Image.open(filepath) as img:\n",
+    "            # Separate images between train/validate/test directories \n",
+    "            target = choose_directory()\n",
+    "\n",
+    "            # Capture class label number\n",
+    "            class_num = class_num_by_filepath[filepath]\n",
+    "            labels[target].append(class_num)\n",
+    "            \n",
+    "            # Name images in numbered format <image#>_<class#>.tif\n",
+    "            path = os.path.join(target_dirs[target], make_image_filename(image_num, class_num))\n",
+    "\n",
+    "            # Resize image to common shape and save to target directory\n",
+    "            img.resize((new_dim, new_dim)).save(path)\n",
+    "# else if directory \"transformed\" exists\n",
+    "else:\n",
+    "    # get labels\n",
+    "    for target_name, target_dir in target_dirs.items():\n",
+    "        for filename in os.listdir(target_dir):\n",
+    "            labels[target_name].append(classnum_from_filename(filename))"
    ]
   },
   {
@@ -200,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,38 +289,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Generating training bottleneck predictions\n",
-      "Batch 27, shape (39, 8, 8, 2048)\n",
-      "Feature weights saved to bn_training.npy\n",
-      "Generating validation bottleneck predictions\n",
-      "Batch 7, shape (13, 8, 8, 2048)\n",
-      "Feature weights saved to bn_validation.npy\n"
+      "Generating training bottleneck predictions:\n",
+      "\tBatch 27, shape (11, 8, 8, 2048)\n",
+      "\tFeature weights saved to bn_training.npy\n",
+      "\n",
+      "Generating validation bottleneck predictions:\n",
+      "\tBatch 4, shape (24, 8, 8, 2048)\n",
+      "\tFeature weights saved to bn_validation.npy\n",
+      "\n"
      ]
     }
    ],
    "source": [
+    "target_dirs = {target: os.path.join(out_dir, target) for target in ['train', 'validate', 'test']}\n",
     "bn_features = dict()\n",
-    "for job_name, image_dir in [('training', train_dir), ('validation', validate_dir)]:\n",
-    "    print(f'Generating {job_name} bottleneck predictions')\n",
+    "predict_task = [('training', target_dirs['train']), ('validation', target_dirs['validate'])]\n",
+    "for task, image_dir in predict_task:\n",
+    "    print(f'Generating {task} bottleneck predictions:')\n",
     "    pred_batches = []\n",
     "    for n, X in enumerate(image_generator(image_dir, batch_size=64)):\n",
     "        pred = model.predict_on_batch(X)\n",
     "        pred_batches.append(pred)\n",
-    "        print(f'Batch {n+1}, shape {pred.shape}', end='\\r')\n",
+    "        print(f'\\tBatch {n+1}, shape {pred.shape}', end='\\r')\n",
     "\n",
     "    # Save weights to bn_features dictionary\n",
-    "    bn_features[job_name] = np.concatenate(pred_batches)\n",
-    "    filename = 'bn_' + job_name + '.npy'\n",
+    "    bn_features[task] = np.concatenate(pred_batches)\n",
+    "    filename = 'bn_' + task + '.npy'\n",
     "    with open(filename, 'wb') as f:\n",
-    "        print(f'\\nFeature weights saved to {filename}')\n",
-    "        np.save(f, bn_features[job_name])"
+    "        print(f'\\n\\tFeature weights saved to {filename}\\n')\n",
+    "        np.save(f, bn_features[task])"
    ]
   },
   {
@@ -273,19 +336,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Convert class label vectors to categorical one-hot arrays\n",
-    "num_classes = len(class_num_by_class_name)\n",
-    "Y_train = to_categorical(train_labels, num_classes)\n",
-    "Y_valid = to_categorical(validate_labels, num_classes)"
+    "num_classes = len(np.unique(labels['train']))\n",
+    "Y_train = to_categorical(labels['train'], num_classes)\n",
+    "Y_valid = to_categorical(labels['validate'], num_classes)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +373,7 @@
     "                  metrics=['accuracy'])\n",
     "\n",
     "    top_model_weights_path = 'bottleneck_model.h5'\n",
-    "    epochs = 25\n",
+    "    epochs = 10\n",
     "    batch_size = 64\n",
     "\n",
     "    model.fit(train_data, train_labels,\n",
@@ -323,69 +386,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 1703 samples, validate on 397 samples\n",
-      "Epoch 1/25\n",
-      "1703/1703 [==============================] - 16s - loss: 7.5076 - acc: 0.4110 - val_loss: 2.8893 - val_acc: 0.7481\n",
-      "Epoch 2/25\n",
-      "1703/1703 [==============================] - 15s - loss: 3.5402 - acc: 0.7076 - val_loss: 1.4458 - val_acc: 0.8237\n",
-      "Epoch 3/25\n",
-      "1703/1703 [==============================] - 15s - loss: 1.9479 - acc: 0.8056 - val_loss: 1.2017 - val_acc: 0.8413\n",
-      "Epoch 4/25\n",
-      "1703/1703 [==============================] - 15s - loss: 1.0773 - acc: 0.8262 - val_loss: 0.4649 - val_acc: 0.8715\n",
-      "Epoch 5/25\n",
-      "1703/1703 [==============================] - 16s - loss: 0.6295 - acc: 0.8456 - val_loss: 0.4448 - val_acc: 0.8816\n",
-      "Epoch 6/25\n",
-      "1703/1703 [==============================] - 16s - loss: 0.4781 - acc: 0.8814 - val_loss: 0.4062 - val_acc: 0.8917\n",
-      "Epoch 7/25\n",
-      "1703/1703 [==============================] - 16s - loss: 0.3148 - acc: 0.9143 - val_loss: 0.4687 - val_acc: 0.8892\n",
-      "Epoch 8/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.2953 - acc: 0.9184 - val_loss: 0.3323 - val_acc: 0.9219\n",
-      "Epoch 9/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.2927 - acc: 0.9284 - val_loss: 0.4280 - val_acc: 0.8967\n",
-      "Epoch 10/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.2428 - acc: 0.9430 - val_loss: 0.4686 - val_acc: 0.9169\n",
-      "Epoch 11/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.3097 - acc: 0.9307 - val_loss: 0.5418 - val_acc: 0.9018\n",
-      "Epoch 12/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.2380 - acc: 0.9378 - val_loss: 0.4444 - val_acc: 0.9169\n",
-      "Epoch 13/25\n",
-      "1703/1703 [==============================] - 18s - loss: 0.1795 - acc: 0.9489 - val_loss: 0.5943 - val_acc: 0.8942\n",
-      "Epoch 14/25\n",
-      "1703/1703 [==============================] - 18s - loss: 0.1732 - acc: 0.9536 - val_loss: 0.4009 - val_acc: 0.9370\n",
-      "Epoch 15/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1524 - acc: 0.9583 - val_loss: 0.5052 - val_acc: 0.9093\n",
-      "Epoch 16/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1812 - acc: 0.9530 - val_loss: 0.5052 - val_acc: 0.9068\n",
-      "Epoch 17/25\n",
-      "1703/1703 [==============================] - 18s - loss: 0.1926 - acc: 0.9554 - val_loss: 0.5611 - val_acc: 0.9219\n",
-      "Epoch 18/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1867 - acc: 0.9589 - val_loss: 0.4512 - val_acc: 0.9295\n",
-      "Epoch 19/25\n",
-      "1703/1703 [==============================] - 18s - loss: 0.1865 - acc: 0.9524 - val_loss: 0.4051 - val_acc: 0.9144\n",
-      "Epoch 20/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1398 - acc: 0.9677 - val_loss: 0.4788 - val_acc: 0.9169\n",
-      "Epoch 21/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1442 - acc: 0.9595 - val_loss: 0.6006 - val_acc: 0.9118\n",
-      "Epoch 22/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1690 - acc: 0.9612 - val_loss: 0.4039 - val_acc: 0.9270\n",
-      "Epoch 23/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1929 - acc: 0.9583 - val_loss: 0.5012 - val_acc: 0.9345\n",
-      "Epoch 24/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1707 - acc: 0.9595 - val_loss: 0.4844 - val_acc: 0.9219\n",
-      "Epoch 25/25\n",
-      "1703/1703 [==============================] - 17s - loss: 0.1399 - acc: 0.9683 - val_loss: 0.4167 - val_acc: 0.9295\n"
+      "Train on 1675 samples, validate on 216 samples\n",
+      "Epoch 1/10\n",
+      "1675/1675 [==============================] - 18s - loss: 7.0606 - acc: 0.4406 - val_loss: 3.4446 - val_acc: 0.7176\n",
+      "Epoch 2/10\n",
+      "1675/1675 [==============================] - 18s - loss: 3.8867 - acc: 0.6854 - val_loss: 2.7050 - val_acc: 0.7685\n",
+      "Epoch 3/10\n",
+      "1675/1675 [==============================] - 19s - loss: 2.3886 - acc: 0.7630 - val_loss: 1.4027 - val_acc: 0.8194\n",
+      "Epoch 4/10\n",
+      "1675/1675 [==============================] - 19s - loss: 1.1097 - acc: 0.8287 - val_loss: 0.7069 - val_acc: 0.8380\n",
+      "Epoch 5/10\n",
+      "1675/1675 [==============================] - 18s - loss: 0.6473 - acc: 0.8513 - val_loss: 0.5164 - val_acc: 0.8611\n",
+      "Epoch 6/10\n",
+      "1675/1675 [==============================] - 17s - loss: 0.4206 - acc: 0.8782 - val_loss: 0.4254 - val_acc: 0.9074\n",
+      "Epoch 7/10\n",
+      "1675/1675 [==============================] - 17s - loss: 0.3812 - acc: 0.8979 - val_loss: 0.5704 - val_acc: 0.8981\n",
+      "Epoch 8/10\n",
+      "1675/1675 [==============================] - 17s - loss: 0.2989 - acc: 0.9188 - val_loss: 0.4088 - val_acc: 0.9167\n",
+      "Epoch 9/10\n",
+      "1675/1675 [==============================] - 17s - loss: 0.2523 - acc: 0.9313 - val_loss: 0.5225 - val_acc: 0.8981\n",
+      "Epoch 10/10\n",
+      "1675/1675 [==============================] - 17s - loss: 0.1883 - acc: 0.9481 - val_loss: 0.5593 - val_acc: 0.9120\n"
      ]
     }
    ],
    "source": [
     "train_top_model()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "####  The fully-connected model achieved ~ 91% validation accuracy!"
    ]
   }
  ],
