--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -116,7 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def choose_directory():\n",
+    "def choose_target():\n",
+    "    \"\"\"\n",
+    "    Helper function to randomize splits between train/validate/test directories.\n",
+    "    \"\"\"\n",
     "    # Use an 80% training data split\n",
     "    train_split = 0.8\n",
     "    if np.random.rand() < train_split:\n",
@@ -231,7 +234,7 @@
     "    for image_num, filepath in enumerate(filepaths):\n",
     "        with Image.open(filepath) as img:\n",
     "            # Separate images between train/validate/test directories \n",
-    "            target = choose_directory()\n",
+    "            target = choose_target()\n",
     "\n",
     "            # Capture class label number\n",
     "            class_num = class_num_by_filepath[filepath]\n",
@@ -242,6 +245,7 @@
     "\n",
     "            # Resize image to common shape and save to target directory\n",
     "            img.resize((new_dim, new_dim)).save(path)\n",
+    "\n",
     "# else if directory \"transformed\" exists\n",
     "else:\n",
     "    # get labels\n",
