Added target dir hierarchy comment

--- a/Classifier.ipynb
+++ b/Classifier.ipynb
@@ -153,7 +153,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Define transformed image target directory paths"
+    "### Define transformed-image target directory paths"
    ]
   },
   {
@@ -162,6 +162,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "Create image directory hierarchy that looks like this:\n",
+    "data/transformed/\n",
+    "                 train/\n",
+    "                       ...\n",
+    "                 validate/\n",
+    "                       ...\n",
+    "                 test/\n",
+    "                       ...\n",
+    "\"\"\"\n",
     "out_dir = os.path.join('data', 'transformed')\n",
     "target_dirs = {target: os.path.join(out_dir, target) for target in ['train', 'validate', 'test']}"
    ]
@@ -429,7 +439,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  The fully-connected model achieved ~ 91% validation accuracy!"
+    "####  The fully-connected model achieves ~ 90% validation accuracy!"
    ]
   }
  ],
